crates/nash-report/src/snapshots/nash_report__canonicalize__branches__formation_context_4.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "type alias state = { x : List }"
---
nash::names::kind_mismatch

  × Kind mismatch in field `x` of little record alias `state`.
   ╭─[Main.nash:1:26]
 1 │ type alias state = { x : List }
   ·                          ────
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
