crates/nash-report/src/snapshots/nash_report__canonicalize__branches__formation_context_5.snap
---
source: crates/nash-report/src/canonicalize.rs
description: type alias Box = List
---
nash::names::kind_mismatch

  × Kind mismatch in the uppercase name of alias `Box`.
   ╭─[Main.nash:1:18]
 1 │ type alias Box = List
   ·                  ────
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
