crates/nash-report/src/snapshots/nash_report__canonicalize__branches__formation_context_7.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "map : List\nmap = []"
---
nash::names::kind_mismatch

  × Kind mismatch in the annotation for `map`.
   ╭─[Main.nash:1:7]
 1 │ map : List
   ·       ────
 2 │ map = []
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
