crates/nash-report/src/snapshots/nash_report__canonicalize__branches__formation_contexts.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "contexts.iter().map(kind_context).collect::<Vec<_>>().join(\"\\n\")"
---
the type annotation
field 2 of Big constructor `Node` in `Tree`
field 1 of little constructor `Node` in `tree`
field `x` of Big record alias `State`
field `x` of little record alias `state`
the uppercase name of alias `Box`
the lowercase name of alias `box`
the annotation for `map`
head 2 of impl `Core.Functor`
