crates/nash-report/src/snapshots/nash_report__canonicalize__branches__module_name_is_preserved.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&report, &source, \"App/Main.nash\")"
---
nash::names::missing_module_header

  × I need the module name to be declared at the top of this file, like this:
  │
  │     module App.Main exposing (..)
  │
  │ Try adding that as the first line of your file!
  help: Note: It is best to replace (..) with an explicit list of types and functions
        you want to expose. When you know a value is only used within this module, you
        can refactor without worrying about uses elsewhere. Limiting exposed values can
        also speed up compilation because I can skip a bunch of work if I see that the
        exposed API has not changed.
