crates/nash-report/src/snapshots/nash_report__canonicalize__branches__operator_javascript_equal.snap
---
source: crates/nash-report/src/canonicalize.rs
description: value = 1 === 2
---
nash::names::not_found_binop

  × Unknown operator `(===)`.
   ╭─[Main.nash:1:11]
 1 │ value = 1 === 2
   ·           ───
   ╰────
  help: Try == instead.
